salt/downloads/bugs/fixes/bug_issue_descriptions/salt-22327
**UPDATE: It looks like 625cc262b43b4342e1ea90ce9b4b5ff3f552dfda is where this issue starts for me.**

bootstrapped latest develop branch - commit: f65f6471a4dfcf429a7508051afd2ecc6e7b4a6b

```
curl -L https://bootstrap.saltstack.com | sudo sh -s -- git develop
```

During `salt-master -l debug` startup I see this type of error many times

```
[DEBUG   ] Reading configuration from /etc/salt/master
[ERROR   ] Failed to import grains core, this is due most likely to a syntax error:
Traceback (most recent call last):
  File "/usr/lib/python2.6/site-packages/salt/loader.py", line 886, in _load_module
    ), fn_, fpath, desc)
  File "/usr/lib/python2.6/site-packages/salt/grains/core.py", line 1664
     grains = {key: val for key, val in grains.items() if val is not None}
                          ^
 SyntaxError: invalid syntax
```

I have an /etc/salt/master file but it is all commented out.

I also see similar errors when running salt-run. For example

```
# salt-run fileserver.clear_lock gitfs
[ERROR   ] Failed to import grains core, this is due most likely to a syntax error:
Traceback (most recent call last):
  File "/usr/lib/python2.6/site-packages/salt/loader.py", line 886, in _load_module
    ), fn_, fpath, desc)
  File "/usr/lib/python2.6/site-packages/salt/grains/core.py", line 1664
     grains = {key: val for key, val in grains.items() if val is not None}
                          ^
 SyntaxError: invalid syntax
```

If I revert back to 2015.2 errors go away.
